[tool.poetry]
name = "ipmi-cert"
version = "1.2.0"
description = ""
authors = [ "Gunnar Cortes Heimisson <gnarr.c@gmail.com>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
lxml = "^5.1.0"
cryptography = "^41.0.7"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
